fixed bg dropdown colour on mobile devices

--- a/app/assets/stylesheets/headers.scss
+++ b/app/assets/stylesheets/headers.scss
@@ -60,6 +60,7 @@
 .navbar-default .navbar-nav .open .dropdown-menu > li > a
 {
   color: $expands-main;
+  background-color: #dddddd;
   z-index: 10000;
   overflow: auto;
 }
